[gd_scene load_steps=8 format=3 uid="uid://c8rw51gwceyv1"]

[ext_resource type="Script" path="res://levels/MainMenu/MainMenu.gd" id="1_5c725"]
[ext_resource type="Texture2D" uid="uid://bjyku550d14un" path="res://resources/sprites/background.png" id="2_h4je5"]
[ext_resource type="FontFile" uid="uid://bi2sdfixosf2v" path="res://resources/fonts/paper_cut.ttf" id="3_0slis"]
[ext_resource type="FontFile" uid="uid://oc44ktq8rgys" path="res://resources/fonts/Xolonium-Regular.ttf" id="4_jq88i"]

[sub_resource type="Animation" id="Animation_ysx83"]
length = 0.001

[sub_resource type="Animation" id="Animation_ge4pr"]
resource_name = "init_shake"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5m8e3"]
_data = {
"RESET": SubResource("Animation_ysx83"),
"init_shake": SubResource("Animation_ge4pr")
}

[node name="MainScreen" type="Node2D"]
script = ExtResource("1_5c725")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(0, -247)
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_h4je5")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, -330, 0, 330)

[node name="ControlsGroup" type="CanvasLayer" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="ControlsGroup"]

[node name="Title_EN" type="Label" parent="ControlsGroup"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -397.5
offset_right = 397.5
offset_bottom = 151.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.866667, 0.866667, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 30
theme_override_fonts/font = ExtResource("3_0slis")
theme_override_font_sizes/font_size = 128
text = "Cave Diver"
horizontal_alignment = 1

[node name="author" type="Label" parent="ControlsGroup"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -368.0
offset_top = -57.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.866667, 0.866667, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 30
theme_override_fonts/font = ExtResource("3_0slis")
theme_override_font_sizes/font_size = 48
text = "Team 45 Inches"

[node name="LevelButtons" type="GridContainer" parent="ControlsGroup"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="ControlsGroup"]
libraries = {
"": SubResource("AnimationLibrary_5m8e3")
}
autoplay = "init_shake"
speed_scale = 0.5

[node name="ClearBeatenButton" type="Button" parent="ControlsGroup"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -36.0
offset_right = 303.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_jq88i")
theme_override_font_sizes/font_size = 24
text = "Reset Beaten Levels"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="ControlsGroup"]
volume_db = 20.0
autoplay = true

[node name="edges for help in render" type="Line2D" parent="."]
points = PackedVector2Array(-576, 324, 576, 324, 576, -324, -576, -324)
closed = true
default_color = Color(0, 0.392157, 0.392157, 1)

[connection signal="pressed" from="ControlsGroup/ClearBeatenButton" to="." method="_on_clear_beaten_button_pressed"]
